# kr23-db

./: .gitignore  CMakeLists.txt  README.md  example.py  pseudocode  solutions.py
abstract/: extended_abstract.bib  extended_abstract.tex
aiai_talk/: talk.tex
doc/arxiv_version/: paper.tex
doc/paper/: paper.bib  paper.tex  plot.tex  supplementary_material.tex
gfodds/: dc_subsumption.yap  examplegeneration.yap  foddUtils.yap  fodd_inference.yap  fodd_inference_2.yap  fodd_inference_4.yap  goal_ordering.yap  map6.yap  modelcheckingreductions.yap  node_precedence.yap  node_precedence2.yap  policyeval.yap  printfodd.yap  reduce5.yap  reductionResult.yap  utils.yap  valueIteration4.yap
gfodds/Elevators/: boxworldDomainDet.pl  elev_policy_4_ve  elev_policy_5_ve  elevators1_1_policy_1_ve  elevators1_1_policy_4_bf  elevators1_1_policy_6_bf  elevators1_1_policy_6_ve  elevators1_1_policy_7_bf  elevators1_1_policy_8_ve  elevators1_policy_1_ve  elevators1_policy_2_bf  elevators1_policy_2_ve  elevators1_policy_2floors_complete_1_bf  elevators1_policy_2floors_complete_2_ve  elevators1_policy_2floors_complete_3_bf  elevators1_policy_2floors_complete_4_bf  elevators1_policy_2floors_complete_6_bf  elevators1_policy_2floors_complete_6_ve  elevators1_policy_2floors_complete_7_ve  elevators1_policy_2floors_complete_8_bf  elevators1_policy_4_ve  elevators2.rddl  elevators2_policy_2iter_ve  elevators2_policy_4iter_ve  elevators_saket_Bkgd.yap  elevators_simple.rddl  iFile_elevators1_2floors_complete.yap  iFile_elevators1_3floors_30ex.yap  iFile_elevators1_3floors_complete.yap  iFile_elevators2_2floors_complete.yap  iFile_elevators3_3floor_50ex.yap  iFile_elevators_3floor_30ex.yap
gfodds/Inventory/: iFile1_inventory.yap  iFile_inventory5_2shops_complete.yap  iFile_inventory_2shops_1truck_complete.yap  ic_4_1_policy_1_ve  ic_4_1_policy_2_bf  ic_4_1_policy_3_bf  ic_4_1_policy_4_bf  ic_4_1_policy_4_ve  ic_4_1_policy_6_ve  ic_4_1_policy_7_ve  ic_4_1_policy_8_ve  ic_4_1_policy_9_ve  ic_5_1_policy_4_ve  ic_5_policy_1_ve  ic_5_policy_2_ve  ic_5_policy_5_ve  ic_policy_1_ve  ic_policy_2_ve  ic_policy_2_ve_det_nored_nomax  ic_policy_2_ve_det_nored_nomax_noload  ic_policy_3_ve_det_nored_nomax  ic_policy_3_ve_det_nored_nomax_noload  ic_policy_3_ve_nored  ic_policy_4_ve_1  ic_policy_4_ve_bi_low  ic_policy_4_ve_det  (+17 more)
instances/: 1dfunctions.mln  1dinjections.mln  1dpartial_injections.mln  1dsurjections.mln  ternary.mln
models/: cards.mln  example.mln  example2.mln  existential1.wmc  friend.mln  functions.mln  functions.wmc  functions1.mln  php.mln  s4.mln  s4.wmc  s42.mln  transitivity.mln  typed_triangles.mln  untyped_triangles.mln
notes/: notes.bib  notes.tex
propositional/: weird2.cnf  weird2.cnf.nnf  weird3.cnf
src/: constraint.cc  constraint.h  edge.h  encoding.cc  encoding.h  gfodd.cc  gfodd.h  hasse_diagram.cc  hasse_diagram.h  main.cc  match.h  match_quality.h  misc.h  optimised_variable_positions.cc  optimised_variable_positions.h  structured_graph.cc  structured_graph.h  variable_positions.cc  variable_positions.h  vertex.cc  vertex.h  vertex_class.cc  vertex_class.h
talk/: talk.tex
test/: constraint_test.cc  encoding_test.cc  gfodd_test.cc  hasse_diagram_test.cc  optimised_variable_positions_test.cc  variable_positions_test.cc  vertex_class_test.cc  vertex_test.cc
(+111 files in other folders)
